Fixing the spacing issue, probably just creating more problems

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -77,7 +77,7 @@ div.readme_small {
   display:none;
 }
 div.readme_small p {line-height: 1em; font-size: 1em; text-align: center;
-  white-space: nowrap;}
+  white-space: pre;}
 
 @media screen and (max-width: 800px) {
   div.readme {
